# RankFlow

./: .gitignore  .gitignore.simple  CMakeLists.txt  LICENSE  README.md  hash_debug.cpp  hash_test.cpp  quick-build.sh  test_data_report.sh
data/: data_checksums.sha256  team01_results.json  team02_results.json  team02_results.json.qt_compact  team02_results.json.sha256  team03_results.json  team03_results.json.qt_debug  team03_results.json.sha256  team04_results.json  team04_results.json.qt_debug  team04_results.json.sha256  team05_results.json  team05_results.json.qt_debug  team05_results.json.sha256  team06_results.json  team07_results.json  temp_compact.json  temp_compact.json.qt_debug  temp_compact.json.sha256  test_alpha_results.json  test_alpha_results.json.qt_debug  test_alpha_results.json.sha256  test_beta_results.json  test_beta_results.json.qt_debug  test_beta_results.json.sha256  test_delta_results.json  test_delta_results.json.qt_compact  test_delta_results.json.sha256  test_epsilon_results.json  test_epsilon_results.json.qt_compact  test_epsilon_results.json.sha256  test_eta_results.json  test_eta_results.json.qt_debug  test_eta_results.json.sha256  test_gamma_results.json  test_gamma_results.json.qt_debug  test_gamma_results.json.sha256  test_monitor.json  test_team_alpha.json  test_team_alpha.json.qt_debug  (+16 more)
doc/: README.md
docs/: NETWORK_GUIDE.md  NETWORK_STATUS_REPORT.md  README.md
include/: danmakuwidget.h  datamanager.h  mainwindow.h  networkconfigdialog.h  networkmanager.h  problemwidget.h  rankingmodel.h
resources/: resources.qrc
src/: main.cpp  (+17 more)
(+56 files in other folders)
